--- a/file/styles.css
+++ b/file/styles.css
@@ -4,7 +4,8 @@ body {
     margin:auto; 
     
     
-    background-color: #040111;
+    background-color: #03000d;
+    /* #040111; */
     /* #0F0E0E; */
     /*#1c0d04;*/  /* #04060a; */  /* Old value: #15202b; */ /* #0d1117 == Github dark background color. 2021-03*/ /* #04060a == Darker github background color. 2021-03 */
     
